# kafka-splitting

./: .dockerignore  Cargo.toml  Dockerfile  admin.properties  config.yaml  install.sh  install_all.sh  mirrord.json  setup.yaml
src/: configuration.rs  crd.rs  k8s_util.rs  kafka.rs  lib.rs  main.rs
src/kafka/: admin.rs  consumer.rs  producer.rs  splitter.rs
