[package]
name = "kafka-splitting"
version = "0.1.0"
edition = "2021"

[dependencies]
kube = { version = "0.93.1", default-features = false, features = [
    "rustls-tls",
    "derive",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
k8s-openapi = { version = "0.22", features = ["v1_24"] }
schemars = "*"
