[package]
name = "kafka-splitting"
version = "0.1.0"
edition = "2021"

[dependencies]
kube = { version = "0.93.1", default-features = false, features = [
    "rustls-tls",
    "derive",
    "client",
    "runtime",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
k8s-openapi = { version = "0.22", features = ["v1_24"] }
schemars = "*"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
futures = "0.3"
anyhow = "*"
fancy-regex = "0.13.0"
tera = "1"
clap = { version = "4", features = ["derive"] }
serde_yaml = "0.9"
rand = "*"
rdkafka = "0.36.2"
json-patch = "2.0.0"
jsonptr = "0.4.7"
